--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Папка с Telegram ботом и токеном
-token.venv/
-*.venv/
+# Файлы данных
+*.csv
+# Токены и секреты
+*.env
+.env
+# Виртуальные окружения
 venv/
 .venv/
 env/
-
-# Файлы данных
-*.csv
